--- a/WorldofZuul/src/GUI/AskingForHelp.fxml
+++ b/WorldofZuul/src/GUI/AskingForHelp.fxml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="200.0" prefWidth="436.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.AskingForHelpController">
+<AnchorPane id="AnchorPane" prefHeight="185.0" prefWidth="436.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.AskingForHelpController">
    <children>
-      <Button fx:id="btnYes" layoutY="100.0" mnemonicParsing="false" onAction="#handleYesButtonAction" prefHeight="100.0" prefWidth="217.5" text="MORE YES THAN NO" textAlignment="CENTER" textFill="#56171a">
+      <Button fx:id="btnYes" layoutY="90.0" mnemonicParsing="false" onAction="#handleYesButtonAction" prefHeight="95.0" prefWidth="217.5" text="MORE YES THAN NO" textAlignment="CENTER" textFill="#56171a">
          <font>
             <Font name="Windlass" size="16.0" />
          </font>
       </Button>
-      <Button fx:id="btnNo" layoutX="218.0" layoutY="100.0" mnemonicParsing="false" onAction="#handleNoButtonAction" prefHeight="100.0" prefWidth="217.5" text="MORE NO THAN YES" textAlignment="CENTER" textFill="#56171a">
+      <Button fx:id="btnNo" layoutX="218.0" layoutY="90.0" mnemonicParsing="false" onAction="#handleNoButtonAction" prefHeight="95.0" prefWidth="217.5" text="MORE NO THAN YES" textAlignment="CENTER" textFill="#56171a">
          <font>
             <Font name="Windlass" size="16.0" />
          </font>
       </Button>
-      <TextField fx:id="txtAreaWillYouHelp" editable="false" prefHeight="100.0" prefWidth="436.0">
+      <TextArea fx:id="txtAreaWillYouHelp" editable="false" prefHeight="90.0" prefWidth="436.0" wrapText="true">
          <font>
             <Font name="Windlass" size="14.0" />
          </font>
-      </TextField>
+      </TextArea>
    </children>
 </AnchorPane>
