--- a/WorldofZuul/src/GUI/FXML.fxml
+++ b/WorldofZuul/src/GUI/FXML.fxml
@@ -211,7 +211,7 @@
             </GridPane>
             <VBox fx:id="VBoxOutput" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="5" GridPane.rowIndex="1">
                <children>
-                  <TextArea fx:id="txtOutput" editable="false" prefHeight="200.0" prefWidth="200.0">
+                  <TextArea fx:id="txtOutput" editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true">
                      <font>
                         <Font name="Windlass" size="12.0" />
                      </font></TextArea>
